--- a/CEE/requirements.txt
+++ b/CEE/requirements.txt
@@ -7,7 +7,6 @@ certifi==2025.4.26
 charset-normalizer==3.4.2
 click==8.2.0
 colorama==0.4.6
-comtypes==1.4.11
 dj-database-url==3.0.1
 Django==6.0
 et_xmlfile==2.0.0
@@ -30,34 +29,19 @@ markdown-it-py==4.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
 ml_dtypes==0.5.4
-MouseInfo==0.1.3
 namex==0.1.0
-numpy==2.3.1
+numpy==1.24.6        # compatible with Python 3.11+
 openpyxl==3.1.5
 opt_einsum==3.4.0
 optree==0.18.0
 packaging==25.0
-pandas==2.3.1
+pandas==2.1.1        # compatible
 pillow==11.2.1
-protobuf==6.33.2
+protobuf==6.0.3      # compatible
 psycopg2-binary==2.9.11
-PyAutoGUI==0.9.54
-PyGetWindow==0.0.9
-Pygments==2.19.2
-pyjokes==0.8.3
-PyMsgBox==1.0.9
-pyperclip==1.9.0
-pypiwin32==223
-PyRect==0.2.0
-PyScreeze==1.0.1
 python-dateutil==2.9.0.post0
 python-docx==1.2.0
 python-dotenv==1.2.1
-pyttsx3==2.98
-pytweening==1.2.0
-pytz==2025.2
-pywhatkit==5.4
-pywin32==310
 requests==2.32.3
 rich==14.2.0
 setuptools==80.9.0
