Update requirements for Render deployment

--- a/CEE/requirements.txt
+++ b/CEE/requirements.txt
@@ -30,14 +30,14 @@ MarkupSafe==3.0.2
 mdurl==0.1.2
 ml_dtypes==0.5.4
 namex==0.1.0
-numpy==1.24.6        # compatible with Python 3.11+
+numpy==1.26.4
 openpyxl==3.1.5
 opt_einsum==3.4.0
 optree==0.18.0
 packaging==25.0
-pandas==2.1.1        # compatible
+pandas==2.4.0        
 pillow==11.2.1
-protobuf==6.0.3      # compatible
+protobuf==6.0.3      
 psycopg2-binary==2.9.11
 python-dateutil==2.9.0.post0
 python-docx==1.2.0
