--- a/CEE/requirements.txt
+++ b/CEE/requirements.txt
@@ -1,44 +1,27 @@
 Django==6.0
-Flask==3.1.1
 gunicorn==23.0.0
 whitenoise==6.11.0
 dj-database-url==3.0.1
 psycopg2-binary==2.9.11
-pandas==2.3.3
-numpy==1.26.4
-openpyxl==3.1.5
+
 tensorflow==2.20.0
+numpy
+pandas
+openpyxl==3.1.5
+
 beautifulsoup4==4.13.4
 lxml==6.0.1
 requests==2.32.3
 wikipedia==1.4.0
+
 fpdf==1.7.2
 python-docx==1.2.0
 pillow==11.2.1
 python-dotenv==1.2.1
-python-dateutil==2.9.0.post0
-click==8.2.0
+
 rich==14.2.0
 colorama==0.4.6
-certifi==2025.4.26
-charset-normalizer==3.4.2
-idna==3.10
-urllib3==2.4.0
-six==1.17.0
-typing_extensions==4.13.2
-setuptools==80.9.0
-wheel==0.45.1
-Jinja2==3.1.6
-MarkupSafe==3.0.2
-Markdown==3.10
-markdown-it-py==4.0.0
-mdurl==0.1.2
-asgiref==3.11.0
-itsdangerous==2.2.0
-Werkzeug==3.1.3
-blinker==1.9.0
-soupsieve==2.7
+
 sqlparse==0.5.4
+asgiref==3.11.0
 tzdata==2025.2
-packaging==25.0
-wrapt==2.0.1
