--- a/CEE/requirements.txt
+++ b/CEE/requirements.txt
@@ -2,7 +2,7 @@ Django==6.0
 gunicorn==23.0.0
 whitenoise==6.11.0
 dj-database-url==2.1.0
-psycopg2-binary==2.9.9
+psycopg[binary]==3.2.3
 tensorflow==2.20.0
 numpy
 pandas
